<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:background="@android:color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:text="@string/access_fav_vid"
        android:textStyle="bold"
        android:layout_margin="10dp"
        android:textSize="15sp"
        android:layout_gravity="center_horizontal"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/just_click_on_btn"
        android:layout_gravity="center_horizontal"
        />

    <Button
        android:id="@+id/widget_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/favorite_video"
        android:textColor="@android:color/white"
        android:layout_marginTop="15dp"
        />

</LinearLayout>